--- a/style/blocks/wrapper.css
+++ b/style/blocks/wrapper.css
@@ -1,3 +1,3 @@
 .wrapper__main {
-  background: url("/img/elephant.png") center top no-repeat, url("./img/sunset.png") center bottom 157px no-repeat;
+  background: url("/air-asia/img/elephant.png") center top no-repeat, url("/air-asia/img/sunset.png") center bottom 157px no-repeat;
 }
