--- a/style/blocks/about.css
+++ b/style/blocks/about.css
@@ -8,11 +8,11 @@
   vertical-align: top;
   width: 490px;
   height: 505px;
-  background: url("/img/gates.png") center center / cover no-repeat;
+  background: url("/air-asia/img/gates.png") center center / cover no-repeat;
 }
 
 .about__block {
-  background: url("/img/mountains.png") center center / cover no-repeat;
+  background: url("/air-asia/img/mountains.png") center center / cover no-repeat;
   padding: 66px 80px;
   display: inline-block;
   vertical-align: top;
