--- a/style/blocks/section.css
+++ b/style/blocks/section.css
@@ -16,7 +16,7 @@
   content: "";
   display: inline-block;
   position: absolute;
-  background: url('/img/flame.png') no-repeat;
+  background: url('/air-asia/img/flame.png') no-repeat;
   height: 28px;
   width: 21px;
   top: 15px;
