Исправил путь к иконкам.

--- a/style/blocks/tours.css
+++ b/style/blocks/tours.css
@@ -54,12 +54,12 @@
 }
 
 .tours__feature--days::before {
-  background: url('/img/icons/calendar.png') no-repeat;
+  background: url('/air-asia/img/icons/calendar.png') no-repeat;
 }
 
 .tours__feature--food::before {
   width: 36px;
-  background: url('/img/icons/meal.png') no-repeat;
+  background: url('/air-asia/img/icons/meal.png') no-repeat;
 }
 
 .tours__description {
