--- a/style/blocks/footer.css
+++ b/style/blocks/footer.css
@@ -1,23 +1,12 @@
 .footer {
-  height: 140px;
+  display: flex;
+  align-items: center;
+  height: 147px;
+  padding-bottom: 8px;
 }
 
-.footer__content {
-  border-top: 1px solid rgba(255, 255, 255, .1);
-}
-
-.footer>.container {
-  position: relative;
-}
-
-.footer .logo {
-  top: 46px;
-}
-
-.footer .menu {
-  top: 54px;
-}
-
-.footer .contacts {
-  top: 44px;
+.footer--inner {
+  height: 132px;
+  padding-bottom: 0px;
+  padding-top: 11px;
 }
