--- a/style/blocks/menu.css
+++ b/style/blocks/menu.css
@@ -1,13 +1,9 @@
-.menu {
-  position: absolute;
-  top: 37px;
-  left: 164px;
+.menu__list {
+  display: flex;
 }
 
 .menu__item {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 51px;
+  margin-right: 54px;
 }
 
 .menu__item:last-child {
