--- a/style/blocks/news.css
+++ b/style/blocks/news.css
@@ -1,15 +1,16 @@
 .news {
-  margin-bottom: 144px;
+  margin-bottom: 145px;
 }
 
 .news__list {
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 53px;
 }
 
 .news__card {
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 20px;
+  flex: 1;
+  margin-right: 25px;
 }
 
 .news__card:last-child {
