--- a/style/blocks/section.css
+++ b/style/blocks/section.css
@@ -19,7 +19,7 @@
 .section-title--fire::after {
   content: "";
   display: inline-block;
-  background: url('/img/flame.png') no-repeat;
+  background: url('/air-asia/img/flame.png') no-repeat;
   height: 28px;
   width: 21px;
   margin-bottom: -3px;
