--- a/style/blocks/top-line.css
+++ b/style/blocks/top-line.css
@@ -1,5 +1,5 @@
 .top-line {
-  background: #001821 url("/air-asia/img/headline-elephant.png") center top / cover no-repeat;
+  background: #001821 url("../../img/headline-elephant.png") center top / cover no-repeat;
 }
 
 .top-line__container {
