--- a/style/blocks/about.css
+++ b/style/blocks/about.css
@@ -11,7 +11,7 @@
   display: block;
   width: 490px;
   height: 505px;
-  background: url("/air-asia/img/gates.png") center center / cover no-repeat;
+  background: url("../../img/gates.png") center center / cover no-repeat;
 }
 
 .about__block {
@@ -22,7 +22,7 @@
   margin-top: 97px;
   padding: 65px 80px;
   border-radius: 5px;
-  background: url("/air-asia/img/mountains.png") center center / cover no-repeat;
+  background: url("../../img/mountains.png") center center / cover no-repeat;
 }
 
 .about__title {
