--- a/style/main.css
+++ b/style/main.css
@@ -9,6 +9,7 @@
 @import url("./blocks/menu.css");
 @import url("./blocks/contacts.css");
 @import url("./blocks/first-screen.css");
+@import url("./blocks/hello.css");
 @import url("./blocks/page-title.css");
 @import url("./blocks/breadcrumbs.css");
 @import url("./blocks/button.css");
@@ -17,7 +18,11 @@
 @import url("./blocks/offer.css");
 @import url("./blocks/services.css");
 @import url("./blocks/service.css");
+@import url("./blocks/testimonials.css");
+@import url("./blocks/testimonial.css");
+@import url("./blocks/banner.css");
 @import url("./blocks/partners.css");
+@import url("./blocks/feedback.css");
 @import url("./blocks/news.css");
 @import url("./blocks/info-card.css");
 @import url("./blocks/pagination.css");
